# case-ans-medallion

./: .gitignore  .sqlfluff  extraction.py  main.py  pyproject.toml  readme.md  utils.py
.github/workflows/: ci.yml
sql/: bronze.sql  gold.sql  silver.sql
tests/: test_utils.py
