[project]
name = "nava-case-data-eng"
version = "0.1.0"
description = ""
authors = [
    {name = "guipignatari",email = "guilherme.pignatari@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "boto3 (>=1.43.51,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
